skins/larry/mail.css
/* ... */
#mailboxlist li.mailbox.sent > a {
	background-position: 6px -286px;
}

#mailboxlist li.mailbox.sent.selected > a {
	background-position: 6px -310px;
}

#mailboxlist li.mailbox.junk > a {
	background-position: 6px -334px;
}

#mailboxlist li.mailbox.junk.selected > a {
	background-position: 6px -358px;
}

#mailboxlist li.mailbox.trash > a {
	background-position: 6px -382px;
}

#mailboxlist li.mailbox.trash.selected > a {
	background-position: 6px -406px;
}

#mailboxlist li.mailbox.archive > a {
	background-position: 6px -1699px;
}

#mailboxlist li.mailbox.archive.selected > a {
	background-position: 6px -1723px;
}

#mailboxlist li.unread {
	font-weight: bold;
}

#mailboxlist li.virtual > a {
	color: #aaa;
}

#mailboxlist li.recent > a {
	color: #017cb4;
}

#mailboxlist li.mailbox div.treetoggle {
	top: 13px;
	left: 19px;
}

#mailboxlist li.mailbox ul li:last-child {
	border-bottom: 0;
}

/* nested mailboxes */

#mailboxlist li.mailbox ul {
	list-style: none;
	margin: 0;
	padding: 0;
	border-top: 1px solid #bbd3da;
}

#mailboxlist li.mailbox ul li a {
	padding-left: 52px;  /* 36 + 1 x 16 */
	background-position: 22px -93px;  /* 6 + 1 x 16 */
}
#mailboxlist li.mailbox ul li.selected > a {
	background-position: 22px -117px;
}
#mailboxlist li.mailbox ul li div.treetoggle {
	left: 33px;
	top: 14px;
}

#mailboxlist li.mailbox ul ul li.mailbox a {
	padding-left: 68px;  /* 2x */
	background-position: 38px -93px;
}
#mailboxlist li.mailbox ul ul li.selected > a {
	background-position: 38px -117px;
}
#mailboxlist li.mailbox ul ul li div.treetoggle {
	left: 48px;
}

#mailboxlist li.mailbox ul ul ul li.mailbox a {
	padding-left: 84px;  /* 3x */
	background-position: 54px -93px;
}
#mailboxlist li.mailbox ul ul ul li.selected > a {
	background-position: 54px -117px;
}
#mailboxlist li.mailbox ul ul ul li div.treetoggle {
	left: 64px;
}

#mailboxlist li.mailbox ul ul ul ul li.mailbox a {
	padding-left: 100px;  /* 4x */
	background-position: 70px -93px;
}
#mailboxlist li.mailbox ul ul ul ul li.selected > a {
	background-position: 70px -117px;
}
#mailboxlist li.mailbox ul ul ul ul li div.treetoggle {
	left: 80px;
}

/* indent folders on levels > 4 */
#mailboxlist li.mailbox ul ul ul ul ul li {
	padding-left: 16px;
}
#mailboxlist li.mailbox ul ul ul ul ul li div.treetoggle {
	left: 96px;
}

#mailboxlist li.mailbox .unreadcount {
	position: absolute;
	top: 3px;
	right: 6px;
	min-width: 1.8em;
	padding: 2px 4px;
	background: #82acb5;
	background: -moz-linear-gradient(top, #82acb5 0%, #6a939f 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#82acb5), color-stop(100%,#6a939f));
	background: -o-linear-gradient(top, #82acb5 0%, #6a939f 100%);
	background: -ms-linear-gradient(top, #82acb5 0%, #6a939f 100%);
	background: linear-gradient(top, #82acb5 0%, #6a939f 100%);
	box-shadow: inset 0 1px 1px 0 #536d72;
	-o-box-shadow: inset 0 1px 1px 0 #536d72;
	-webkit-box-shadow: inset 0 1px 1px 0 #536d72;
	-moz-box-shadow: inset 0 1px 1px 0 #536d72;
	border-radius: 9px;
	color: #fff;
	text-align: center;
	font-weight: bold;
	text-shadow: none;
}

#mailboxlist li.mailbox.selected > a .unreadcount {
	background: #005d76;
	background: -moz-linear-gradient(top, #005d76 0%, #004558 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#005d76), color-stop(100%,#004558));
	background: -o-linear-gradient(top, #005d76 0%, #004558 100%);
	background: -ms-linear-gradient(top, #005d76 0%, #004558 100%);
	background: linear-gradient(top, #005d76 0%, #004558 100%);
	box-shadow: inset 0 1px 1px 0 #003645;
	-o-box-shadow: inset 0 1px 1px 0 #003645;
	-webkit-box-shadow: inset 0 1px 1px 0 #003645;
	-moz-box-shadow: inset 0 1px 1px 0 #003645;
}

#mailboxlist li.mailbox.recent > a .unreadcount {
	background: #017cb4;
	background: -moz-linear-gradient(top, #017cb4 0%, #006ca4 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#017cb4), color-stop(100%,#006ca4));
	background: -o-linear-gradient(top, #017cb4 0%, #006ca4 100%);
	background: -ms-linear-gradient(top, #017cb4 0%, #006ca4 100%);
	background: linear-gradient(top, #017cb4 0%, #006ca4 100%);
	box-shadow: inset 0 1px 1px 0 #005080;
	-o-box-shadow: inset 0 1px 1px 0 #005080;
	-webkit-box-shadow: inset 0 1px 1px 0 #005080;
	-moz-box-shadow: inset 0 1px 1px 0 #005080;
}

#searchfilter {
	position: absolute;
	right: 256px;
	width: auto;
	top: 2px;
}

#searchfilter select {
	height: 26px;
}

#mailview-left select.mailboxlist {
	position: relative;
	top: 10px;
	width: 100%;
}

#messagetoolbar {
	position: absolute;
	top: -6px;
	left: 0;
	height: 40px;
	white-space: nowrap;
	z-index: 10;
}

#messagetoolbar.fullwidth {
	right: 0;
}

#messagetoolbar .toolbarselect {
	position: absolute;
	bottom: 6px;
	right: 3px;
}

#messagesearchtools {
	position: absolute;
	right: 0;
	top: 0;
}

#mailpreviewtoggle {
	display: block;
	position: absolute;
	top: 6px;
	right: 4px;
	width: 20px;
	height: 18px;
	background: url(images/buttons.png) -3px -458px no-repeat;
}

#mailpreviewtoggle.enabled {
	background-position: -28px -458px;
}


/*** message list ***/

#messagelist thead td:first-child {
	border-radius: 4px 0 0 0; /* for Chrome */
}

#messagelist tr td.attachment,
#messagelist tr td.threads,
#messagelist tr td.status,
#messagelist tr td.flag,
#messagelist tr td.priority {
	width: 20px;
	padding: 2px 3px;
}

.webkit #messagelist tr td.attachment,
.webkit #messagelist tr td.threads,
.webkit #messagelist tr td.status,
.webkit #messagelist tr td.flag,
.webkit #messagelist tr td.priority {
	width: 26px;
}

#messagelist tr td.threads {
	width: 26px;
}

.webkit #messagelist tr td.threads {
	width: 30px;
}

#messagelist tr td.threads,
#messagelist tr td.threads + td {
	border-left: 0;
}

#messagelist tr td.size {
	width: 60px;
	text-align: right;
}

#messagelist thead tr td.size {
	text-align: left;
}
/* ... */

